# knowit2019

./: .gitignore  README.md  default.nix  knowit.cabal
src/: day01.hs
