name:               knowit2019
version:            0.1.0.0
synopsis:           Haskell solutions Knowit's Christmas Calendar
description:        Solutions to Knowit's Christmas Calendar...
license:            PublicDomain
license-file:       LICENSE
author:             Sondre Nilsen
maintainer:         nilsen.sondre@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md
cabal-version:      >= 1.10

executable knowit01
  main-is:          day01.hs
  hs-source-dirs:   src
  build-depends:    base == 4.12.*, split
  default-language: Haskell2010
